<resources>
    <string name="app_name">InstagramApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="editProfile">Edit Profile</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="view_post">View Post</string>
    <string name="profile_fragment">Profile</string>
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>
    <string name="no_likes">0 likes</string>
    <string name="posts">Posts</string>
    <string name="selected_img">selected_img</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="auth_failed">Failed to Authenticated</string>
    <string name="auth_success">Authentication Success</string>
    <string name="dbname_users_account_settings">User_acount_settings</string>
    <string name="dbname_users">Users</string>
    <string name="calling_activity">calling_activity</string>
    <string name="filed_user_name">userName</string>
    <string name="confirm_passwoed_dialog">ConfirmPasswordDialog</string>
    <string name="string_share">Share</string>
    <string name="user_name">User Name</string>
    <string name="user_nameText">User Name:</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="emailText">Email:</string>
    <string name="changePhoto">Change Photo</string>
    <string name="displayName">Display Name</string>
    <string name="website">Website</string>
    <string name="description">Description</string>
    <string name="privateInfo">Private Info</string>
    <string name="totalUploadedPhotos">%d Photos</string>
    <string name="noPhotosUploaded">No Photos</string>
    <string name="photos">Photos</string>
    <string name="register">Register</string>
    <string name="registerUser">Register User</string>
    <string name="passwordText">Password:</string>
    <string name="writeADescription"><font size="16">Write a description...</font></string>
    <string name="alreadyAMemeber">Already a Member? Click Here</string>
    <string name="noAccount">"Don't have an account? Register</string>
    <string name="signoutQuestion">"Are You sure you want to sign out?</string>
    <string name="signing_progress">"Signing out..</string>
    <string name="post_description">The app allows users to upload photos and videos to the service, which can be edited with various filters, and organized with tags and location information. </string>
</resources>
