<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Utils.MainActivity">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">


        <LinearLayout

            android:layout_width="340dp"
            android:layout_height="663dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginBottom="55dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/registerUser"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse" />

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_margin="50dp"
                android:layout_marginLeft="150dp"
                android:layout_marginStart="150dp"
                android:src="@drawable/profile_image" />

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="0dp"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:padding="3dp"
                android:hint="@string/emailText" />

            <EditText
                android:id="@+id/editUserName"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="3dp"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:hint="@string/user_nameText" />

            <EditText
                android:id="@+id/editTextPassword"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="3dp"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:hint="@string/passwordText" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/register" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/textViewSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:hint="@string/alreadyAMemeber"
                android:layout_gravity="bottom"
                android:textAlignment="center"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>








