<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/tvConfirmSignOut"
            android:text="@string/signoutQuestion"
            />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:hint="@string/sign_out"
            />

        <ProgressBar
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:id="@+id/progressBar"
            android:visibility="gone"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signing_progress"
            android:textSize="20sp"
            android:layout_marginTop="225dp"
            android:layout_marginEnd="110dp"
            android:id="@+id/textSignOut"
            android:visibility="gone"
            />
    </RelativeLayout>

</RelativeLayout>
</android.support.constraint.ConstraintLayout>