<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Utils.SignInActivity">
    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="55dp"
            android:layout_width="395dp"
            android:layout_height="715dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            tools:ignore="MissingConstraints">
            <TextView

                android:hint="User Login"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_margin="15dp"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:hint="@string/emailText"
                android:id="@+id/editTextMail"
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_margin="15dp"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:id="@+id/editTextPassword"
                android:padding="3dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordText" />

            <Button
                android:layout_gravity="center"
                android:hint="@string/sign_in"
                android:id="@+id/buttonSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnViewRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:hint="@string/noAccount"
                android:layout_gravity="bottom"
                android:textAlignment="center"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>